@@ -1,4 +1,4 @@
-# $Id: GNUmakefile,v 1.38 2008-08-28 17:45:24 nicm Exp $
+# $Id: GNUmakefile,v 1.39 2008-09-09 22:16:36 nicm Exp $
 
 .PHONY: clean
 
@@ -31,7 +31,7 @@ SRCS= tmux.c server.c server-msg.c server-fn.c buffer.c buffer-poll.c status.c \
       cmd-list-commands.c cmd-move-window.c cmd-select-prompt.c \
       cmd-respawn-window.c \
       window-scroll.c window-more.c window-copy.c options.c paste.c \
-      tty.c tty-keys.c tty-write.c screen-write.c screen-redraw.c
+      tty.c tty-keys.c tty-write.c screen-write.c screen-redraw.c utf8.c
 
 CC?= gcc
 INCDIRS+= -I. -I-
