@@ -1,4 +1,4 @@
-/* $Id: cmd-list-windows.c,v 1.22 2008-09-08 17:40:50 nicm Exp $ */
+/* $Id: cmd-list-windows.c,v 1.23 2008-09-09 22:16:36 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -72,10 +72,12 @@ cmd_list_windows_exec(struct cmd *self, struct cmd_ctx *ctx)
 		else
 			name = "";
 		ctx->print(ctx,
-		    "%d: %s \"%s\" (%s) [%ux%u] [history %u/%u, %llu bytes]",
+		    "%d: %s \"%s\" (%s) [%ux%u] [history %u/%u, %llu bytes] "
+		    "[UTF8 table %u/%u]",
 		    wl->idx, w->name, w->base.title, name,
 		    screen_size_x(&w->base), screen_size_y(&w->base),
-		    w->base.hsize, w->base.hlimit, size);
+		    w->base.hsize, w->base.hlimit, size,
+		    ARRAY_LENGTH(&w->base.utf8_table.array), UTF8_LIMIT);
 	}
 
 	if (ctx->cmdclient != NULL)
